--- a/uvinci.html
+++ b/uvinci.html
@@ -16,44 +16,41 @@
 
     <div class="project-container">
         <div class="image-overview">
-            <img src="static/uvinci/uvinciProduct.JPG" alt="Project Image"> <!-- Update image path if needed -->
+            <img src="static/uvinci/uvinciProduct.JPG" alt="Project Image">
         </div>
-        <!-- Project Title -->
+        
         <h1>UVinci's Automatic UV Door Handle Sanitizer</h1>
 
-        <!-- Overview Section (two-column layout) -->
         <section class="overview-section">
             <div class="overview-left">
                 <h2>Overview</h2>
             </div>
             <div class="overview-right">
-                <p>During the pandemic, preventing contact with commonly touched surfaces is crucial to avoid infection. Door handles, being one of the most touched surfaces, pose a significant risk. Traditional cleaning methods, such as wiping or spraying with alcohol, are often forgotten or can damage door handles over time. UVinci’s sanitizer device addresses this problem by automatically sanitizing door handles using UV-C rays when its Pyroelectric Infrared Sensor (PIR) detects motion.</p>
+                <p>During the pandemic, reducing contact with commonly touched surfaces became crucial for minimizing the risk of infection. Door handles, being high-contact points, presented a significant challenge. Traditional sanitization methods, such as wiping or spraying alcohol, are often forgotten or can cause long-term damage to the door handles. UVinci’s automatic UV sanitizer addresses this issue by using UV-C rays to sanitize door handles automatically whenever motion is detected by a Pyroelectric Infrared Sensor (PIR).</p>
                 <div class="role-duration">
                     <p><strong>Role:</strong> Developer</p>
-                    <p><strong>Duration:</strong> November 2020 - July 2023</p>
-                    <!-- <a href="#">View full presentation</a> -->
+                    <p><strong>Duration:</strong> November 2020 — July 2023</p>
                 </div>
             </div>
         </section>
 
-        <!-- Business and User Problem Section (two-column layout) -->
         <section class="details-section">
             <div class="details-left">
-                <h2>Problem</h2>
+                <h2>The Challenge</h2>
             </div>
             <div class="details-right">
                 <h2>User Problem</h2>
-                <p>Commonly touched surfaces, especially door handles, are critical points for virus and bacteria transmission. Traditional sanitization methods can be easily forgotten, leading to potential health risks. Moreover, frequent exposure to harsh chemicals can damage door handles over time, necessitating a more reliable solution.</p>
+                <p>Commonly touched surfaces like door handles are prime areas for virus and bacteria transmission. Traditional sanitization methods are often unreliable, forgotten, or require harsh chemicals that can degrade the materials over time. There was a need for a more consistent and sustainable solution to ensure public safety, especially in high-contact areas.</p>
             </div>
         </section>
 
         <section class="details-section">
             <div class="details-left">
-                <h2>Solution</h2>
+                <h2>Our Approach</h2>
             </div>
             <div class="details-right">
                 <h2>Solution</h2>
-                <p>UVinci’s sanitizer device automatically sanitizes door handles with UV-C light upon detecting motion through a PIR sensor. Powered by a rechargeable lithium-ion battery and controlled by an Attiny-13a-PU microcontroller, the device operates with a time delay for optimal performance. The 3D-printed casing includes a shield mechanism to contain UV light and a detachable latch system for easy recharging.</p>
+                <p>UVinci’s automatic UV-C sanitizer device uses a PIR sensor to detect motion and activate the sanitization process. It sanitizes the door handle with UV-C light, powered by a rechargeable lithium-ion battery. Controlled by an Attiny-13a-PU microcontroller, the device operates with a time delay for optimal performance. The design includes a 3D-printed casing that houses a UV shield mechanism and a detachable latch for easy recharging.</p>
             </div>
         </section>
 
@@ -63,17 +60,17 @@
             </div>
             <div class="details-right">
                 <h2>Impact</h2>
-                <p>The prototype is fully functional and has been implemented in Ngaduman Village, Java, where healthcare access is limited. The device is installed on door handles in public spaces like schools and churches, contributing to safer environments. Fundraising efforts through Bantoo.id have successfully raised 9.5 million rupiahs to facilitate larger scale manufacturing.</p>
+                <p>The UVinci prototype has been successfully implemented in Ngaduman Village, Java, where access to healthcare is limited. It’s installed on public door handles in spaces like schools and churches, helping to create safer environments. Additionally, fundraising efforts via Bantoo.id have raised 9.5 million rupiahs, enabling progress toward large-scale manufacturing of the device.</p>
             </div>
         </section>
 
         <section class="details-section">
             <div class="details-left">
-                <h2>Takeaways</h2>
+                <h2>Key Takeaways</h2>
             </div>
             <div class="details-right">
                 <h2>Takeaways</h2>
-                <p>This project has provided valuable insights into the importance of innovative solutions in public health. It has highlighted the necessity of user-centered design in creating effective sanitization technologies. The experience gained in the development and fundraising processes has deepened my understanding of product management and the challenges faced in bringing a new product to market.</p>
+                <p>This project reinforced the importance of user-centered design in developing impactful public health solutions. It also taught me about the challenges of turning an idea into a tangible product, particularly through the development and fundraising process. The experience deepened my understanding of product management and how critical innovation is in addressing real-world health challenges.</p>
             </div>
         </section>
     </div>
