--- a/vertologic.html
+++ b/vertologic.html
@@ -18,42 +18,40 @@
         <div class="image-overview">
             <img src="static/vertilogic/virtuex.png" alt="Project Image">
         </div>
-        <!-- Project Title -->
+
         <h1>Vertilogic - Virtue-X Client</h1>
 
-        <!-- Overview Section (two-column layout) -->
         <section class="overview-section">
             <div class="overview-left">
                 <h2>Overview</h2>
             </div>
             <div class="overview-right">
-                <p>Collaborated in a cross-functional team at Vertilogic, a software solutions company, to develop Virtue-X, a platform connecting exhibitors and visitors through a virtual 360° exhibition experience. This innovative solution emerged as a critical tool during the COVID-19 pandemic when traditional in-person exhibitions were not feasible, allowing businesses to maintain engagement and reach their audiences remotely.</p>
+                <p>At Vertilogic, a software solutions company, I partnered with a development team to optimize key backend features for Virtue-X, a virtual 360° exhibition platform. The platform allowed exhibitors and visitors to engage through a fully immersive online experience. Virtue-X became an essential tool during the COVID-19 pandemic, providing businesses a way to connect with their audiences remotely when in-person events were no longer feasible.</p>
                 <div class="role-duration">
-                    <p><strong>Role:</strong> Intern Web App Developer</p>
-                    <p><strong>Duration:</strong> June '21 — July '21</p>
+                    <p><strong>Role:</strong> Intern Web App Developer, Product Development</p>
+                    <p><strong>Duration:</strong> June 2021 — July 2021</p>
                     <a href="http://104.248.150.69/" target="_blank">View demo</a>
                 </div>
             </div>
         </section>
 
-        <!-- Business and User Problem Section (two-column layout) -->
         <section class="details-section">
             <div class="details-left">
-                <h2>Problem</h2>
+                <h2>The Challenge</h2>
             </div>
             <div class="details-right">
                 <h2>User Problem</h2>
-                <p>Exhibitors and visitors faced significant challenges connecting effectively in a traditional exhibition format. The pandemic created restrictions on gatherings, leading to the cancellation of many events. Businesses struggled to showcase their products and services, while potential customers were unable to explore new offerings in person. This gap in the market highlighted the need for a robust digital solution that could facilitate meaningful connections and interactions remotely.</p>
+                <p>Exhibitors and visitors were struggling to connect effectively during the pandemic, with traditional exhibition formats restricted or canceled. Businesses were unable to showcase their offerings, while customers couldn’t interact with new products and services. The need for an engaging and accessible digital platform became clear, one that could simulate the exhibition experience while maintaining interaction and engagement.</p>
             </div>
         </section>
 
         <section class="details-section">
             <div class="details-left">
-                <h2>Solution</h2>
+                <h2>Our Approach</h2>
             </div>
             <div class="details-right">
                 <h2>Solution</h2>
-                <p>Developed Virtue-X, a virtual platform utilizing Node.js for backend communication, allowing real-time interactions between exhibitors and visitors. The platform included features such as virtual booths, live chat, and video conferencing, which enabled exhibitors to present their offerings dynamically. This solution not only replicated the exhibition experience online but also enhanced it by providing data analytics on user engagement, helping businesses tailor their approaches effectively.</p>
+                <p>As part of the development team, I worked on optimizing the backend of Virtue-X, focusing on real-time data synchronization using WebSockets. I also helped improve database management with MongoDB, which efficiently handled over 10,000 exhibitor and visitor records. Key features of the platform included virtual booths, live chat, and video conferencing, allowing exhibitors to present their products dynamically. The platform also provided valuable data analytics, helping businesses tailor their engagement strategies based on user activity.</p>
             </div>
         </section>
 
@@ -63,17 +61,17 @@
             </div>
             <div class="details-right">
                 <h2>Impact</h2>
-                <p>Virtue-X facilitated connections between exhibitors and visitors during a time when physical interaction was impossible. It enhanced engagement, allowing businesses to maintain visibility and adapt to the new digital landscape. The platform enabled exhibitors to reach a broader audience beyond geographical limitations, leading to increased participation and interest in virtual events. Feedback from users indicated a high level of satisfaction with the virtual experience, marking a successful transition from traditional exhibitions to digital platforms.</p>
+                <p>Virtue-X enabled businesses to maintain visibility during a time when physical interactions were not possible. The platform facilitated meaningful connections between exhibitors and visitors, extending the reach of events beyond geographical limitations. Feedback from users showed high satisfaction, and the platform played a key role in the digital transformation of events, allowing businesses to continue operations and engage with a wider audience.</p>
             </div>
         </section>
 
         <section class="details-section">
             <div class="details-left">
-                <h2>Takeaways</h2> 
+                <h2>Key Takeaways</h2>
             </div>
             <div class="details-right">
                 <h2>Takeaways</h2>
-                <p>Gained hands-on experience in developing real-time communication features and integrating interactive UI elements using JavaScript, HTML, and CSS. This project reinforced the importance of adaptability and innovation in product development, especially in response to global challenges. Additionally, it highlighted the value of user feedback in shaping product features and ensuring a user-centered design approach. The experience enriched my understanding of cross-functional collaboration in a fast-paced development environment.</p>
+                <p>This project provided hands-on experience in real-time communication features and enhanced my technical skills with JavaScript, HTML, and CSS. It also emphasized the importance of rapid problem-solving and adaptability in a fast-paced development environment. I learned how critical it is to incorporate user feedback and take a user-centered approach in product development, especially when creating a platform meant to serve a wide range of people with varying needs.</p>
             </div>
         </section>
     </div>
